<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imgdesc"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textRecapApercuGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editRecapNouvInd"
        android:layout_below="@+id/editRecapNouvInd"
        android:text="@string/apercugraphique" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textRecapApercuGraph"
        android:layout_below="@+id/textRecapApercuGraph"
        android:contentDescription="@string/imgphotodesc"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewRecapNouvInd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editRecapNumcpt"
        android:layout_below="@+id/editRecapNumcpt"
        android:text="@string/numnouvelindex" />

    <EditText
        android:id="@+id/editRecapNumcpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_alignLeft="@+id/textViewRecapNumCpt"
        android:layout_alignTop="@+id/textViewRecapNumCpt"
        android:layout_marginTop="18dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editRecapNouvInd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_alignLeft="@+id/textViewRecapNouvInd"
        android:layout_below="@+id/textViewRecapNouvInd"
        android:ems="10" />

    <Button
        android:id="@+id/btnRecapFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:text="@string/btntermine" />

    <Button
        android:id="@+id/btnRecapStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRecapFin"
        android:layout_alignBottom="@+id/btnRecapFin"
        android:layout_toRightOf="@+id/btnRecapFin"
        android:text="@string/btnstatistique" />

    <Button
        android:id="@+id/btnRecapZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRecapSuivant"
        android:layout_alignRight="@+id/btnRecapSuivant"
        android:text="@string/btnzone" />

    <TextView
        android:id="@+id/textViewRecapNumCpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignRight="@+id/btnRecapFin"
        android:text="@string/numcompteur" />

    <Button
        android:id="@+id/btnRecapSuivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRecapStat"
        android:layout_alignBottom="@+id/btnRecapStat"
        android:layout_toRightOf="@+id/btnRecapStat"
        android:text="@string/btnsuivant" />

</RelativeLayout>