<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgdesc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:text="@string/textzone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/autoCompleteLiZone"
        android:layout_marginTop="20dp"
        android:text="@string/texttraiter" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteLiZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/imageView1"
        android:ems="10"
        android:hint="@string/cbochoixzone" >

        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/editTraite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:enabled="false"
        android:ems="10"
        android:inputType="number"
        android:text="@string/valuezero" />

    <Button
        android:id="@+id/buttonZoneSuivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTotal"
        android:layout_toRightOf="@+id/editTotal"
        android:enabled="false"
        android:text="@string/btnsuivant" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editTraite"
        android:layout_marginTop="16dp"
        android:text="@string/texttotal" />

    <EditText
        android:id="@+id/editTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="@string/valuezero" />

</RelativeLayout>