<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imgdesc"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btnPhotoCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewCpt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/btncapture" />

    <ImageView
        android:id="@+id/imageViewCpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgphotodesc"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btnPhotoStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPhotoSuivant"
        android:layout_below="@+id/btnPhotoCapture"
        android:text="@string/btnstatistique" />

    <Button
        android:id="@+id/btnPhotoSuivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPhotoCapture"
        android:layout_below="@+id/btnPhotoStat"
        android:text="@string/btnsuivant" />

</RelativeLayout>